--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     height: 100%;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.4);
+    display: none;
 }
 .modal-content {
     background-color: #fefefe;
