--- a/style.css
+++ b/style.css
@@ -1,22 +1,3 @@
-.modal {
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.4);
-    display: none;
-}
-.modal-content {
-    background-color: #fefefe;
-    margin: 5vh auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -61,6 +42,22 @@ button {
     border-radius: 10px;
     border: none;
     min-width: 50%;
+}
+nav {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+.admin_page_link {
+    color: #ffffff;
+    background-color: #000000;
+    padding: 0.75rem 0.5rem;
+    border: 1px solid #ffffff;
+}
+.admin_page_link:hover {
+    color: #000000;
+    background-color: #ffffff;
+    border: 1px solid #000000;
 }
 /* -----Cart----- */
 #cart-button {
@@ -170,6 +167,88 @@ button {
     padding: 2rem;
     gap: 1rem;
     border-radius: 1rem;
+}
+/* Admin */
+.form-group {
+    margin: 0.2rem 0;
+}
+.form-group label {
+    display: block;
+}
+/* Modal */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  /* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 5vh auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+  }
+  /* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  #order-block {
+    padding: 2rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
+  }
+  .item {
+      border: 1px solid black;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding: 1rem;
+  }
+  #order-form {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    margin: 10px 0;
+  }
+  #order-form input,
+  #add_product_form input{
+      font-size: 1.5rem;
+      padding: 0.4rem 1rem;
+  }
+  #add_product_form textarea {
+    font-size: 1.5rem;
+    padding: 0.4rem 1rem;
+  }
+  .admin_grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+  }
+  #admin_page_orders .product *{
+      font-weight: 500;
+      padding: 0.2rem 0;
+  }
+  #admin_page_orders .product {
+    margin-bottom: 1rem;
 }
 /* -----Responsive----- */
 @media screen and (max-width: 1000px){
