--- a/style.css
+++ b/style.css
@@ -177,8 +177,8 @@ nav {
 }
 /* Modal */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
+    /*display: none;*/
+    position: fixed;
     z-index: 1; /* Sit on top */
     left: 0;
     top: 0;
